   handles the new 'immediate' argument to setDisplayString().
   Annoyance: setDisplayString() also does a 'Rearrange randomly placed
   submodules'. This is not so trivial to change (module positions will need
   to be explicitly stored)...
May 7, 2000
 - Makefile.vc improvements [from Balazs Kelemen]
 - tk_PatchLevel check corrected (complained about Tk 8.0.5) [reported by
   Ulrich Kaage]
May 10, 2000
 - [Tkenv]/extra-stack= option added, it specifies (in bytes) how much extra
   stack each activity() module needs when executing under Tkenv. This used to
   be hardcoded (16384), now users can fine-tune it. [suggested by Niko]
May 21, 2000
 - bugfix: 'Options|Load inspector list' now works again (you must re-generate
   your existing inspect.lst files)
------ omnetpp-2.0b4 released ------
Jun 2, 2000
 - minor fix in tkcmd.cc [reported by Richard Lyon]
------ omnetpp-2.0b5 released ------
July 17, 2000
 - fixed bug in splitInspectorName()  [reported by Ulrich Kaage]
July 26, 2000
 - fixed a bug which caused Tcl error when using ev<< or ev.printf() with
   a string than contained curly braces [reported by Nick van Foreest]
 - added Edit|Find... to main menu.
Aug 7, 2000
 - makefile changes for RPM support
Sep 29, 2000
 - fixed a bug which caused Tkenv NOT to report an error when the 'p' display
   string tag's 3rd arg (layout) was invalid
 - the 'p' display string tag's 3rd arg (layout) can now be abbreviated:
   r=row, c=col=column, m=matrix, i=ri=ring
 - added new layout to 'p' tag: exact (abbreviation: e or x); this lets
   one position modules in a module vector one by one
 - submodule display strings may use the parent module's parameters too
Jan 3, 2000
 - added 2nd status bar (containing: number of messages in the FES, total
   number of messages created, number of currently existing message objects)
Jan 13, 2000
 - added performance status bar (simsec/sec, events/sec, events/simsec gauges)